# AndroidFFmpegEdu

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gq/ffmpegedu/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  X264Encoder.cpp  X264Encoder.h  native-lib.cpp  native_ffmpeg.cpp
app/src/main/cpp/includes/libavutil/: ffversion.h
app/src/main/java/com/gq/ffmpegedu/: MainActivity.kt
app/src/main/java/com/gq/ffmpegedu/native/: X264Native.kt
app/src/main/java/com/gq/ffmpegedu/notification/: NotificationBuilder.kt
app/src/main/java/com/gq/ffmpegedu/services/: RecordScreenService.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/gq/ffmpegedu/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libs/: composebasic-debug.aar
